--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,6 +15,7 @@ android {
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -56,30 +57,39 @@ dependencies {
     implementation AndroidLibraries.navigation
     implementation AndroidLibraries.material
     implementation AndroidLibraries.appCompat
+    //api AndroidLibraries.lifecycleViewModel
+    //api AndroidLibraries.lifecycleExtensions
 
     implementation Libraries.roomRunTime
     implementation Libraries.roomKtx
     implementation Libraries.roomRx
     implementation Libraries.koin
     implementation Libraries.koinViewModel
+
+
+
     api AndroidLibraries.viewModelLifeCycle
+
     kapt Libraries.roomCompiler
 
     testImplementation TestLibraries.junit
     testImplementation TestLibraries.coroutine
     testImplementation TestLibraries.mock_kotlin
     testImplementation TestLibraries.mock_core
+    testImplementation TestLibraries.archCoreTest
+
 
 
     implementation project(":domain")
     implementation project(":data")
     implementation project(":common")
 
-  //  testImplementation "junit:junit:$jUnitVersion"
-   // testImplementation "org.mockito:mockito-core:$mockitoVersion"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.0-M1"
-    testImplementation "android.arch.core:core-testing:1.1.1"
+    implementation "android.arch.lifecycle:extensions:1.1.1"
+    annotationProcessor "android.arch.lifecycle:compiler:1.1.1"
 
-    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.3'
+    //  testImplementation "junit:junit:$jUnitVersion"
+    // testImplementation "org.mockito:mockito-core:$mockitoVersion"
+    //implementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.0-M1"
+
 
 }
